--- a/www/business-of-design.htm
+++ b/www/business-of-design.htm
@@ -79,7 +79,7 @@
                     </li>
 					<li><a href="business-of-design.htm">The Business of Design</a>
 						<ul>
-						  <li><a href="starting-your-design-related-business.htm.html">Starting Your Design-Related Business</a></li>
+						  <li><a href="starting-your-design-related-business.htm">Starting Your Design-Related Business</a></li>
 							<li><a href="marketing-your-design-related-business.htm">Marketing Your Design-Related Business</a></li>
 						</ul>
 					</li>
@@ -102,7 +102,7 @@
               
             </p>
             <h2>Starting Your Design Related Business</h2>
-            <p>Are you interested in starting your own business? Already in business for yourself but perhaps feel like you may have missed a few steps along the way? Our half-day <a href="starting-your-design-related-business.htm.html">Starting Your Design Related Business</a> workshop touches on <strong>every aspect and detail of starting a business</strong>, to get your <strong>business up and running for very little money</strong>. We want you to think big, but start small.</p>
+            <p>Are you interested in starting your own business? Already in business for yourself but perhaps feel like you may have missed a few steps along the way? Our half-day <a href="starting-your-design-related-business.htm">Starting Your Design Related Business</a> workshop touches on <strong>every aspect and detail of starting a business</strong>, to get your <strong>business up and running for very little money</strong>. We want you to think big, but start small.</p>
             <p><em>Please note: Students enrolling in Starting Your Design Related Business must have completed a two or three day workshop through School of Interior Redesign LLC or an approved design program at another institution or been in business a minimum of six months.</em></p>
             <h2>Marketing Your Design Related Business</h2>
             <p>Perhaps you’ve started your business but aren’t getting the results you want. Or you have all the business parts in place, but need help with your marketing plan. The <a href="marketing-your-design-related-business.htm">Marketing Your Design Related Business</a> workshop is jam-packed with creative ways to market your business effectively. Written from a designer&#39;s perspective, we know that the way you do business today has changed, so we&#39;ve provided <strong>a myriad of ideas, and instruction on how you can implement these ideas for very little money</strong>.</p>
