--- a/www/starting-your-design-related-business.htm
+++ b/www/starting-your-design-related-business.htm
@@ -61,7 +61,7 @@
 					<li><a href="interior-redesign-classes.htm" class="course">Interior Redesign</a>
                     	<ul>
                         	<li><a href="interior-redesign-intro.htm">Introduction to Interior Redesign</a></li>
-                        	<li><a href="interior-redesign-professional.htm">Redesign Intensive</a></li>
+                        	<li><a href="interior-redesign-intensive.htm">Redesign Intensive</a></li>
                         	<li><a href="interior-redesign-staging.htm">Redesign/Staging Intensive</a></li>
                         </ul>
                     </li>
@@ -79,7 +79,7 @@
                     </li>
 					<li><a href="business-of-design.htm">The Business of Design</a>
 						<ul>
-						  <li><a href="starting-your-design-related-business.htm.html">Starting Your Design-Related Business</a></li>
+						  <li><a href="starting-your-design-related-business.htm">Starting Your Design-Related Business</a></li>
 							<li><a href="marketing-your-design-related-business.htm">Marketing Your Design-Related Business</a></li>
 						</ul>
 					</li>
@@ -101,34 +101,33 @@
             <p class="course-description">A half-day workshop</p>
             <p>Do you have the skills and passion necessary to begin your own business in interior decorating, or the fast-growing fields of interior redesign (also called one day decorating) or real estate staging (also called home staging), or any design-related business but you just aren't sure how to do it? <br />
               <br />
-            Starting Your Design-Related Business will give you the information you need to begin your very own business. From deciding a name through running an ethical business - it's all covered. Included in this comprehensive training are:</p>
+            Starting Your Design-Related Business will give you the information you need to begin your very own business. <strong>From deciding a name through running an ethical business&mdash;it's all covered.</strong></p>
+            <p><strong>Included in this comprehensive training are:</strong></p>
             <ul>
-              <li>What to do before you begin: Writing a mission statement and business plan </li>
+              <li>What to do before you begin: <strong>Writing a mission statement and business plan </strong></li>
               <li>Determining your products and services</li>
-              <li>How to price your services</li>
+              <li>How to <strong>price your services</strong></li>
               <li>How to use estimates, proposals, and contracts</li>
               <li>The type of ownership appropriate for your business </li>
               <li>Determining registration and licensing requirements</li>
               <li>How to set up a home office</li>
-              <li>Determining your insurance needs</li>
+              <li>Determining <strong>your insurance needs</strong></li>
               <li>Understanding business law</li>
               <li>Establishing appropriate business policies</li>
               <li>How to establish a budget to stay in business</li>
               <li>Working with trade professionals</li>
               <li>Resources</li>
             </ul>
-            <p><br />
-              ...As well as a myriad of business forms that will keep you and your business organized.</p>
+            <p>...As well as a myriad of business forms that will keep you and your business organized.</p>
             <p>With the step-by-step process provided, you will know exactly what needs to be done and in what order, but you can set the pace.  Whether you want to be in business in one month or one year or longer, you'll be ready to go!</p>
-            <p>To Enroll in the Starting Your Design Related Business:<br />
-              Please note: Students enrolling in Starting Your Design Related Business must have completed a two or three day workshop through School of Interior Redesign LLC or an approved design program at another institution or been in business a minimum of six months.</p>
-            <p>Cost for the half-day Starting Your Design-Related Business is $250.
-            <p>To see the schedule Starting Your Design Related Business classes, check the Class Schedule for more information.
-            <p>To reserve your space in a Starting Your Design Related Business class, complete the Application and submit, along with your deposit of $100. The balance is due two weeks prior to the start of class.</p>
-            <p>Cancellation Policy: A full refund will be given if the student cancels ten days prior to the first day of class. A 75% refund will apply if the student cancels at anytime after the ten day cancellation period. No refund will be given after the start of classes. However, should a student need to cancel or leave due to an emergency, the tuition will be applied to another scheduled class. Refunds will be mailed to the student within fourteen days of cancellation.
-            <p>For more information on any interior redesign training workshop, email info@schoolofinteriorredesign.com or call the School of Interior Redesign LLC at (203) 783-1556 or (877) 814-0518 toll-free.</p>
-
-            <!-- InstanceEndEditable --></td>
+            <h2>To Enroll in the Starting Your Design Related Business:</h2>
+            <p><em>Please note: Students enrolling in Starting Your Design Related Business must have completed a two or three day workshop through School of Interior Redesign LLC or an approved design program at another institution or been in business a minimum of six months.</em></p>
+            <p><strong>Cost for the half-day Starting Your Design-Related Business</strong> is $250.
+            <p><strong>To see the schedule Starting Your Design Related Business classes</strong>, check the <a href="course-schedule.htm">Class Schedule</a> for more information.
+            <p><strong>To reserve your space in a Starting Your Design Related Business class</strong>, complete the <a href="register-redesign-staging-class.htm">Application</a> and submit, along with your <a href="payment.htm">deposit of $100</a>. The balance is due two weeks prior to the start of class.</p>
+            <!-- #BeginLibraryItem "/Library/cancellation-policy.lbi" -->
+            <p><strong>Cancellation Policy</strong>: A full refund will be given if the student cancels ten days prior to the first day of class. A 75% refund will apply if the student cancels at anytime after the ten day cancellation period. No refund will be given after the start of classes. However, should a student need to cancel or leave due to an emergency, the tuition will be applied to another scheduled class. Refunds will be mailed to the student within fourteen days of cancellation.</p>
+            <!-- #EndLibraryItem --><!-- #BeginLibraryItem "/Library/for-more-info.lbi" --><p align="center"><strong>For more information on any interior redesign training workshop</strong>, email <a href="mailto:info@schoolofinteriorredesign.com">info@schoolofinteriorredesign.com</a> or call the School of Interior Redesign LLC at <strong><a href="tel:203-783-1556">(203) 783-1556</a></strong> or <strong><a href="tel:877-814-0518">(877) 814-0518</a></strong> toll-free.</p><!-- #EndLibraryItem --><!-- InstanceEndEditable --></td>
         </tr>
         <tr>
           <td width="10" align="left" valign="top" class="navbar">&nbsp;</td>
@@ -141,11 +140,8 @@
                 <a href="http://www.associationofdesigneducation.com" target="_blank"><img src="images/logo_ADE.jpg" alt="Ann Anderson, Founder and Director of the School of Interior Redesign, is a member of ADE, the Association of Design Education, an organization of professionals who teach interior decorating, interior redesign, one day decorating, home staging and real estate staging." height="70" hspace="14" border="0" /></a>
                 <a href="http://www.networkofexecutivewomen.org" target="_blank"><img src="images/newlogo_transp.gif" width="121" height="68" hspace="14" border="0" /></a>
                 <a href="http://www.interiordesignsociety.org/" target="_blank"><img src="images/logo_ids.jpg" alt="Ann Anderson, a graduate of the Sheffield School of Interior Design and a Certified Interior Redesign Specialist, is a member of IDS, the Interior Design Society." width="95" height="70" hspace="14" border="0" /></a>
-            </td>
-        </tr>
-        <tr>
-          <td colspan="4" class="footer"><div align="left"><a class="footer" href="#top">Return to top of page</a></div>
-          </td>
+				<div class="footer"><a class="footer" href="#top">Return to top of page</a></div>
+			</td>
         </tr>
       </table></td>
   </tr>
