--- a/www/index.htm
+++ b/www/index.htm
@@ -88,7 +88,7 @@
                     </li>
 					<li><a href="business-of-design.htm">The Business of Design</a>
 						<ul>
-						  <li><a href="starting-your-design-related-business.htm.html">Starting Your Design-Related Business</a></li>
+						  <li><a href="starting-your-design-related-business.htm">Starting Your Design-Related Business</a></li>
 							<li><a href="marketing-your-design-related-business.htm">Marketing Your Design-Related Business</a></li>
 						</ul>
 					</li>
