--- a/www/real-estate-staging-professional.htm
+++ b/www/real-estate-staging-professional.htm
@@ -63,7 +63,7 @@
 					<li><a href="interior-redesign-classes.htm" class="course">Interior Redesign</a>
                     	<ul>
                         	<li><a href="interior-redesign-intro.htm">Introduction to Interior Redesign</a></li>
-                        	<li><a href="interior-redesign-professional.htm">Redesign Intensive</a></li>
+                        	<li><a href="interior-redesign-intensive.htm">Redesign Intensive</a></li>
                         	<li><a href="interior-redesign-staging.htm">Redesign/Staging Intensive</a></li>
                         </ul>
                     </li>
@@ -81,7 +81,7 @@
                     </li>
 					<li><a href="business-of-design.htm">The Business of Design</a>
 						<ul>
-						  <li><a href="starting-your-design-related-business.htm.html">Starting Your Design-Related Business</a></li>
+						  <li><a href="starting-your-design-related-business.htm">Starting Your Design-Related Business</a></li>
 							<li><a href="marketing-your-design-related-business.htm">Marketing Your Design-Related Business</a></li>
 						</ul>
 					</li>
@@ -150,9 +150,9 @@
             </blockquote>
             <!-- #BeginLibraryItem "/Library/cancellation-policy.lbi" -->
             <p><strong>Cancellation Policy</strong>: A full refund will be given if the student cancels ten days prior to the first day of class. A 75% refund will apply if the student cancels at anytime after the ten day cancellation period. No refund will be given after the start of classes. However, should a student need to cancel or leave due to an emergency, the tuition will be applied to another scheduled class. Refunds will be mailed to the student within fourteen days of cancellation.</p>
-            <!-- #EndLibraryItem --><!-- #BeginLibraryItem "/Library/for-more-info.lbi" --><p style="text-align:center;"><strong>For more information on any interior redesign training workshop</strong>,<br />
-email <a href="mailto:info@schoolofinteriorredesign.com">info@schoolofinteriorredesign.com</a> or call the School of Interior Redesign at<br />
-<strong>(203) 783-1556</strong> or <strong>(877) 814-0518</strong> toll-free.</p><!-- #EndLibraryItem --><!-- InstanceEndEditable --></td>
+            <!-- #EndLibraryItem --><!-- #BeginLibraryItem "/Library/for-more-info.lbi" -->
+            <p align="center"><strong>For more information on any interior redesign training workshop</strong>, email <a href="mailto:info@schoolofinteriorredesign.com">info@schoolofinteriorredesign.com</a> or call the School of Interior Redesign LLC at <strong><a href="tel:203-783-1556">(203) 783-1556</a></strong> or <strong><a href="tel:877-814-0518">(877) 814-0518</a></strong> toll-free.</p>
+            <!-- #EndLibraryItem --><!-- InstanceEndEditable --></td>
         </tr>
         <tr>
           <td width="10" align="left" valign="top" class="navbar">&nbsp;</td>
@@ -165,11 +165,8 @@ email <a href="mailto:info@schoolofinteriorredesign.com">info@schoolofinteriorre
                 <a href="http://www.associationofdesigneducation.com" target="_blank"><img src="images/logo_ADE.jpg" alt="Ann Anderson, Founder and Director of the School of Interior Redesign, is a member of ADE, the Association of Design Education, an organization of professionals who teach interior decorating, interior redesign, one day decorating, home staging and real estate staging." height="70" hspace="14" border="0" /></a>
                 <a href="http://www.networkofexecutivewomen.org" target="_blank"><img src="images/newlogo_transp.gif" width="121" height="68" hspace="14" border="0" /></a>
                 <a href="http://www.interiordesignsociety.org/" target="_blank"><img src="images/logo_ids.jpg" alt="Ann Anderson, a graduate of the Sheffield School of Interior Design and a Certified Interior Redesign Specialist, is a member of IDS, the Interior Design Society." width="95" height="70" hspace="14" border="0" /></a>
-            </td>
-        </tr>
-        <tr>
-          <td colspan="4" class="footer"><div align="left"><a class="footer" href="#top">Return to top of page</a></div>
-          </td>
+				<div class="footer"><a class="footer" href="#top">Return to top of page</a></div>
+			</td>
         </tr>
       </table></td>
   </tr>
