--- a/www/sitemap-interior-redesign-real-estate-staging.htm
+++ b/www/sitemap-interior-redesign-real-estate-staging.htm
@@ -61,7 +61,7 @@
 					<li><a href="interior-redesign-classes.htm" class="course">Interior Redesign</a>
                     	<ul>
                         	<li><a href="interior-redesign-intro.htm">Introduction to Interior Redesign</a></li>
-                        	<li><a href="interior-redesign-professional.htm">Redesign Intensive</a></li>
+                        	<li><a href="interior-redesign-intensive.htm">Redesign Intensive</a></li>
                         	<li><a href="interior-redesign-staging.htm">Redesign/Staging Intensive</a></li>
                         </ul>
                     </li>
@@ -79,7 +79,7 @@
                     </li>
 					<li><a href="business-of-design.htm">The Business of Design</a>
 						<ul>
-						  <li><a href="starting-your-design-related-business.htm.html">Starting Your Design-Related Business</a></li>
+						  <li><a href="starting-your-design-related-business.htm">Starting Your Design-Related Business</a></li>
 							<li><a href="marketing-your-design-related-business.htm">Marketing Your Design-Related Business</a></li>
 						</ul>
 					</li>
@@ -117,7 +117,7 @@
                   <ul>
                       <li><a href="interior-redesign-intro.htm">Introduction to Interior Redesign</a><br />
                       a 1-day interior redesign seminar </li>
-                      <li><a href="interior-redesign-professional.htm">Interior Redesign for the Professional</a><br />
+                      <li><a href="interior-redesign-intensive.htm">Interior Redesign for the Professional</a><br />
                       a 3-day interior redesign training workshop for interior
                         design and real estate professionals </li>
                       <li><a href="interior-redesign-staging.htm">Interior Redesign/Real
@@ -331,11 +331,8 @@ If you're a professional who wants to add real estate staging your existing serv
                 <a href="http://www.associationofdesigneducation.com" target="_blank"><img src="images/logo_ADE.jpg" alt="Ann Anderson, Founder and Director of the School of Interior Redesign, is a member of ADE, the Association of Design Education, an organization of professionals who teach interior decorating, interior redesign, one day decorating, home staging and real estate staging." height="70" hspace="14" border="0" /></a>
                 <a href="http://www.networkofexecutivewomen.org" target="_blank"><img src="images/newlogo_transp.gif" width="121" height="68" hspace="14" border="0" /></a>
                 <a href="http://www.interiordesignsociety.org/" target="_blank"><img src="images/logo_ids.jpg" alt="Ann Anderson, a graduate of the Sheffield School of Interior Design and a Certified Interior Redesign Specialist, is a member of IDS, the Interior Design Society." width="95" height="70" hspace="14" border="0" /></a>
-            </td>
-        </tr>
-        <tr>
-          <td colspan="4" class="footer"><div align="left"><a class="footer" href="#top">Return to top of page</a></div>
-          </td>
+				<div class="footer"><a class="footer" href="#top">Return to top of page</a></div>
+			</td>
         </tr>
       </table></td>
   </tr>
