--- a/www/ezine-redesign-staging-school.htm
+++ b/www/ezine-redesign-staging-school.htm
@@ -97,10 +97,11 @@
           <td bgcolor="#000000" align="left" valign="top" class="navbar"><img src="images/black_line.jpg" width="6" /></td>
           <td width="540" align="left" valign="top"><br />
             <!-- InstanceBeginEditable name="content" -->
-          <h1 align="center"> Free Ezine </h1>
+          <h1 align="center"> Free E-Zine </h1>
           <p>
-          </p><h3 align="left">You'll Learn a Lot from Our Free Business and Marketing
-            Ezine!</h3>
+          </p>
+          <h3 align="left">You'll Learn a Lot from Our Free Business and Marketing
+            E-Zine!</h3>
           <ul>
             <li>Are you looking for help in setting up your interior design,
               interior redesign, or real estate staging business?&nbsp;</li>
@@ -122,7 +123,7 @@
               interior design</strong>, <strong>interior
               redesign (one day decorating), or</strong>              <strong>real
               estate staging (home staging)</strong>,
-              sign up for the <em><strong>free</strong></em> ezine,
+              sign up for the <em><strong>free</strong></em> e-zine,
             written to provide business and marketing tips <em><strong>for
             people in any design-related business</strong></em>, or <em><strong>interested
             in starting a design-related business</strong></em> and delivered
@@ -141,7 +142,7 @@
                   </tr>
                   <tr>
                     <td valign="center" align="middle" colspan="2" height="40"><div align="center">
-                      <input type="submit" value="Subscribe to our FREE ezine!" name="go" />
+                      <input type="submit" value="Subscribe to our FREE E-Zine!" name="go" />
                       <input type="hidden" value="1101642200531" name="m" />
                       <input type="hidden" value="oi" name="p" />
                     </div></td>
