Library Item Change
Updated Library Items

--- a/www/course-schedule.htm
+++ b/www/course-schedule.htm
@@ -98,9 +98,7 @@
           <td width="540" align="left" valign="top"><br />
             <!-- InstanceBeginEditable name="content" -->
             <h1>Class Schedule</h1>
-<iframe class="calendar" src="https://www.google.com/calendar/embed?showTitle=0&amp;showCalendars=0&amp;height=600&amp;wkst=1&amp;bgcolor=%23FFFFFF&amp;src=97vr5i2cipql3qdf8kl957jg80%40group.calendar.google.com&amp;color=%23B1440E&amp;ctz=America%2FNew_York" style=" border-width:0 " width="519" height="580" frameborder="0" scrolling="no"></iframe><!-- #BeginLibraryItem "/Library/for-more-info.lbi" --><p style="text-align:center;"><strong>For more information on any interior redesign training workshop</strong>,<br />
-email <a href="mailto:info@schoolofinteriorredesign.com">info@schoolofinteriorredesign.com</a> or call the School of Interior Redesign at<br />
-<strong>(203) 783-1556</strong> or <strong>(877) 814-0518</strong> toll-free.</p><!-- #EndLibraryItem --><!-- InstanceEndEditable --></td>
+<iframe class="calendar" src="https://www.google.com/calendar/embed?showTitle=0&amp;showCalendars=0&amp;height=600&amp;wkst=1&amp;bgcolor=%23FFFFFF&amp;src=97vr5i2cipql3qdf8kl957jg80%40group.calendar.google.com&amp;color=%23B1440E&amp;ctz=America%2FNew_York" style=" border-width:0 " width="519" height="580" frameborder="0" scrolling="no"></iframe><!-- #BeginLibraryItem "/Library/for-more-info.lbi" --><p align="center"><strong>For more information on any interior redesign training workshop</strong>, email <a href="mailto:info@schoolofinteriorredesign.com">info@schoolofinteriorredesign.com</a> or call the School of Interior Redesign LLC at <strong><a href="tel:203-783-1556">(203) 783-1556</a></strong> or <strong><a href="tel:877-814-0518">(877) 814-0518</a></strong> toll-free.</p><!-- #EndLibraryItem --><!-- InstanceEndEditable --></td>
         </tr>
         <tr>
           <td width="10" align="left" valign="top" class="navbar">&nbsp;</td>
