--- a/www/distance-learning-redesign-staging.htm
+++ b/www/distance-learning-redesign-staging.htm
@@ -138,8 +138,8 @@
               you can be assured that regardless of which course you choose,
               you'll receive the same quality of education that you would receive
               in a traditional classroom setting.</p>
-          <h1 align="center">The Courses </h1>
-          <h2 align="left"><a name="Certified_Interior_Decorator_Professional_Training" id="Certified_Interior_Decorator_Professional_Training"></a>Certified Decorating Professional&reg;  </h2>
+          <h2 align="center">The Courses </h2>
+          <h3 align="left"><a name="Certified_Interior_Decorator_Professional_Training" id="Certified_Interior_Decorator_Professional_Training"></a>Certified Decorating Professional&reg;  </h3>
           <p align="left">You can offer affordable solutions to your clients
             without the designer price-tag. Our program will teach you
             how to improve the functionality and aesthetic of a home using tried
@@ -149,7 +149,7 @@
             to <strong>price your services</strong> for every budget. And that's just for
             starters! (<a href="assets/sir-certified-decorating-professional-home-study.pdf" target="_blank">Learn
             more</a>.) </p>
-          <h2 align="left"><a name="Interior_Redesign_Distance_Learning_Training" id="Interior_Redesign_Distance_Learning_Training"></a>Interior Redesign </h2>
+          <h3 align="left"><a name="Interior_Redesign_Distance_Learning_Training" id="Interior_Redesign_Distance_Learning_Training"></a>Interior Redesign </h3>
           <p align="left">The Interior Redesign program focuses on teaching you
             how to <strong>use your client's own furnishings</strong> and accessories to create
             warm and inviting spaces for a fraction of the cost of conventional
@@ -161,35 +161,31 @@
             to purchase additional items. You'll learn how to re-purpose,
             re-use, re-fresh, and re-design with style. (<a href="assets/sir-interior-redesign-home-study.pdf" target="_blank">Learn
             more</a>.) </p>
-          <h2><a name="Real_Estate_Staging_Distance_Learning_Training" id="Real_Estate_Staging_Distance_Learning_Training"></a>Real Estate Staging </h2>
+          <h3><a name="Real_Estate_Staging_Distance_Learning_Training" id="Real_Estate_Staging_Distance_Learning_Training"></a>Real Estate Staging </h3>
           <p>The Real Estate Staging program takes you through the entire process
             of preparing homes for sale, <strong>from the staging consultation, all the
             way to working with sellers as they make major (or minor) changes</strong> to their property to increase its value and decrease the amount of
             time it takes to sell.&nbsp; You will learn what to do, how to do
             it, as well as when to stop.&nbsp; (<a href="assets/sir-real-estate-staging.pdf" target="_blank">Learn
             more</a>.) </p>
-          <h2>Interior Redesign and Real Estate Staging </h2>
+          <h3>Interior Redesign and Real Estate Staging </h3>
           <p>The best of both worlds. <strong>Redesign and staging go hand in hand.</strong> Once you have learned the placement techniques in the redesign program, you can apply those same techniques when staging homes. The workshop explains the <strong>similarities and differences between redesign and staging and how to incorporate them in each situation</strong>. (<a href="assets/sir-interior-redesign-and-staging-home-study.pdf" target="_blank">Learn more</a>.)</p>
-          <h2 align="left"><a name="Starting_Your_Design_Related_Business" id="Starting_Your_Design_Related_Business"></a>Starting Your Design-Related Business </h2>
+          <h3 align="left"><a name="Starting_Your_Design_Related_Business" id="Starting_Your_Design_Related_Business"></a>Starting Your Design-Related Business </h3>
           <p align="left">Are you in business for yourself? Some people
             find that they may have missed a few steps along the way. Our
             SYB manual touches on <strong>every aspect and detail of starting a business</strong>,
             to get you up and running (legally). Our goal is to teach you
             how to <strong>own and operate a design-related business for very little
               money</strong>. We want you to think big, but start small. (<a href="assets/sir-starting-your-design-related-business.pdf" target="_blank">Learn more</a>.) </p>
-          <h2 align="left"><a name="Marketing_Your_Design_Related_Business" id="Marketing_Your_Design_Related_Business"></a>Marketing Your Design-Related Business </h2>
+          <h3 align="left"><a name="Marketing_Your_Design_Related_Business" id="Marketing_Your_Design_Related_Business"></a>Marketing Your Design-Related Business </h3>
           <p align="left">This manual is jam-packed with creative ways to market
             your business effectively.&nbsp; Written from a designer's perspective,
             we know that the way you do business today has changed, so we've
             provided <strong>a myriad of ideas, and instruction on how you can implement
             these ideas for very little money</strong>.&nbsp; (<a href="assets/sir-marketing-design-related-business.pdf" target="_blank">Learn
             more</a>.) </p>
-          <h2 align="left">Business Complete </h2>
-          <p align="left">Combine our two business courses together for one low
-            price. </p>
-          <p align="center"><a href="questions-interior-redesign-staging-training.htm"><em><strong>Click
-                  here for the questions you should ask ...and </strong></em><br />
-              <em><strong>what you should know about training and certification</strong></em></a><em><strong>.</strong></em></p>
+          <h3 align="left">Business Complete</h3>
+          <p align="left">Combine our two business courses together for one low price.</p>
           <!-- InstanceEndEditable --></td>
         </tr>
         <tr>
