--- a/www/interior-decorator-training-course-1day.htm
+++ b/www/interior-decorator-training-course-1day.htm
@@ -189,9 +189,7 @@
             </blockquote>
           <!-- #BeginLibraryItem "/Library/cancellation-policy.lbi" -->
           <p><strong>Cancellation Policy</strong>: A full refund will be given if the student cancels ten days prior to the first day of class. A 75% refund will apply if the student cancels at anytime after the ten day cancellation period. No refund will be given after the start of classes. However, should a student need to cancel or leave due to an emergency, the tuition will be applied to another scheduled class. Refunds will be mailed to the student within fourteen days of cancellation.</p>
-          <!-- #EndLibraryItem --><!-- #BeginLibraryItem "/Library/for-more-info.lbi" --><p style="text-align:center;"><strong>For more information on any interior redesign training workshop</strong>,<br />
-email <a href="mailto:info@schoolofinteriorredesign.com">info@schoolofinteriorredesign.com</a> or call the School of Interior Redesign at<br />
-<strong>(203) 783-1556</strong> or <strong>(877) 814-0518</strong> toll-free.</p><!-- #EndLibraryItem --><!-- InstanceEndEditable --></td>
+          <!-- #EndLibraryItem --><!-- #BeginLibraryItem "/Library/for-more-info.lbi" --><p align="center"><strong>For more information on any interior redesign training workshop</strong>, email <a href="mailto:info@schoolofinteriorredesign.com">info@schoolofinteriorredesign.com</a> or call the School of Interior Redesign LLC at <strong><a href="tel:203-783-1556">(203) 783-1556</a></strong> or <strong><a href="tel:877-814-0518">(877) 814-0518</a></strong> toll-free.</p><!-- #EndLibraryItem --><!-- InstanceEndEditable --></td>
         </tr>
         <tr>
           <td width="10" align="left" valign="top" class="navbar">&nbsp;</td>
