--- a/www/interior-decorator-training-course-3day.htm
+++ b/www/interior-decorator-training-course-3day.htm
@@ -97,28 +97,18 @@
           <td bgcolor="#000000" align="left" valign="top" class="navbar"><img src="images/black_line.jpg" width="6" /></td>
           <td width="540" align="left" valign="top"><br />
             <!-- InstanceBeginEditable name="content" -->
-            <h1 align="center">Certified Decorating Professional&reg; 
-            Program </h1>
-            <p class="course-description">A three day interior decorator training course designed for the professional who wishes to add interior decorating to their services </p>
-            <p><img src="images/iStock_000001456091XSmall.jpg" width="250" align="right"/>Would you like to <strong>add</strong> <strong>interior
-                decorating</strong>              <strong>to your
-                current business</strong>?&nbsp; Or
-              would you like to <strong>improve your</strong> <strong>decorating
-              skills</strong> to feel more confident
-              as you work with your clients in a design-related business?&nbsp; Our<strong> Certified
-              Decorating Professional</strong>&reg; <strong>program</strong>              is
-              just what you need!&nbsp;</p>
-            <p><strong>What will you learn in this </strong> <strong>interior
-                decorating course</strong>? </p>
+            <h1 align="center">Certified Decorating Professional&reg; Program </h1>
+            <p class="course-description">A three day interior decorator training course designed for the professional who wishes to add interior decorating to their services</p>
+            <p><img src="images/iStock_000001456091XSmall.jpg" width="250" align="right"/>Would you like to <strong>add interior decorating to your
+                current business</strong> Or would you like to <strong>improve your decorating skills</strong> to feel more confident as you work with your clients in a design-related business?&nbsp; Our<strong> Certified Decorating Professional</strong>&reg; <strong>program</strong> is just what you need!</p>
+            <p><strong>What will you learn in this interior decorating course?</strong></p>
             <ul>
               <li>Decorating from the floor up - from finishes to finishing touches</li>
               <li>Color - why color is important and not just for walls</li>
-              <li>Space planning and furniture arrangement - how it all fits
-                together</li>
+              <li>Space planning and furniture arrangement - how it all fits together</li>
               <li>Furniture - blending styles with ease</li>
               <li>Details - accessory placement and selection</li>
-              <li>Presentations and proposals - putting together a Style File
-                and design boards</li>
+              <li>Presentations and proposals - putting together a Style File and design boards</li>
               <li>Fabric, textures and window fashions</li>
               <li>Creative solutions to decorating dilemmas </li>
               <li>Communicating with your client</li>
@@ -126,14 +116,13 @@
               <li>Studio exercises and demonstrations </li>
             </ul>
             <p>...and so much more!</p>
-            <p><strong>Our </strong> <strong>interior decorating</strong> <strong>certificate
-            program</strong> <strong>includes</strong>:</p>
+            <p><strong>Our interior decorating certificate program includes</strong>:</p>
             <ul>
               <li>A comprehensive training manual</li>
               <li>Detailed training exercises and visual presentations</li>
               <li>Lunch, snacks and beverages</li>
               <li>Limited seating for individual attention</li>
-              <li>Business to business support     </li>
+              <li>Business to business support</li>
             </ul>
             <blockquote class="testimonial">
             	<p>I want to thank you for an amazing class. I have been reviewing my materials and I am more excited every day&mdash;with all of it! You are an inspiration and I look forward to seeing you at the ADE conference in September.</p>
@@ -141,8 +130,7 @@
             </blockquote>
             <p><strong>Please Note:</strong></p>
             <p>Three-day Certified Decorating Professional&reg; classes are held in both Milford, Connecticut and Peterborough, New Hampshire. Please <a href="course-schedule.htm">check our calendar for the dates in your area</a>.</p>
-            <p align="center"><a href="questions-interior-redesign-staging-training.htm"><em><strong>Click
-                    here for the questions you should ask ...and </strong></em><br />
+            <p align="center"><a href="questions-interior-redesign-staging-training.htm"><em><strong>Click here for the questions you should ask ...and </strong></em><br />
                     <em><strong>what you should know about training and certification</strong></em></a><em><strong>.</strong></em></p>
             <p align="left">Advanced studies in interior decorating area available
               at the Peterborough, NH location. <a href="mailto:info@schoolofinteriorredesign.com">Contact
