--- a/www/interior-redesign-staging.htm
+++ b/www/interior-redesign-staging.htm
@@ -98,9 +98,8 @@
           <td width="540" align="left" valign="top"><br />
             <!-- InstanceBeginEditable name="content" -->
             <h1>Interior Redesign/Real Estate Staging Intensive</h1>
-            <p class="course-description">An intensive 5-day<sup><a href="#details">1</a></sup> workshop that includes both interior redesign (one day decorating) and real estate staging (home staging) training</p>
-            <p>Our <strong>Five-Day<sup><a href="#details">1</a></sup> Interior Redesign/Real Estate Staging Training Workshop</strong> is designed to give you everything you need to begin a career in interior redesign and real estate staging (also called home staging) or to add redesign or staging to your existing business. Our Certificate program has been approved by the Commissioner of Higher Education for the State of Connecticut, which ensures your training meets the high standards set for private occupational schools.</p>
-            <p><strong>Our training materials provide you with all the information</strong> you need to know during the five days<sup><a href="#details">1</a></sup> of training, as well as other valuable resources necessary to start your career.</p>
+            <p class="course-description">An intensive 4-day workshop that includes both interior redesign (one day decorating) and real estate staging (home staging) training</p>
+            <p>Our <strong>4-Day Interior Redesign/Real Estate Staging Training Workshop</strong> is designed to teach you everything you need to give your clients beautiful, comfortable living spaces, whether for living or selling.</p>
             <p>Included in the training materials are the following:</p>
             <ul>
               <li><img src="images/staging_living_rm.jpg" width="250" height="166" align="right" />An extremely detailed analysis of interior redesign (one day decorating), including the principles and techniques critical to your success as an Interior Redesign Specialist.</li>
@@ -108,28 +107,18 @@
               <li>What, when, why, and how to prepare homes for sale, both inside and out.</li>
               <li>Basic interior decorating guidelines to enhance your knowledge base.</li>
               <li>Additional income opportunities to enable you to expand your customer base and increase your earning potential.</li>
-              <li>The steps you need to take to establish your interior redesign and real estate staging business, including meeting state guidelines, setting your prices, budgeting, insurance, contracts&mdash;and so much more.</li>
-              <li>Extensive information on marketing your business, both in the start-up phase, and as you grow. This includes marketing ideas you can pull directly from the manual and begin using immediately&mdash;all you need to do is add your name.</li>
-              <li>Lists of resources to help you in every stage of business development.</li>
             </ul>
             <h2>Hands On Interior Redesign and Staging Training</h2>
-            <p>In addition to covering the training materials in their entirety, we also complete three hands-on redesigns/stagings during the week. We follow all of the steps you will take once you begin your business, including meeting with the clients, determining their needs, then giving them the room of their dreams.</p>
-            <p>But that&rsquo;s not all!&nbsp; At the end of training, you will receive:</p>
-            <ul>
-              <li>A Certificate of Completion in Professional Redesign.</li>
-              <li>Ongoing support whenever you would like, as you embark on your exciting new career.</li>
-              <li>A one year of membership in the <a href="http://www.associationofdesigneducation.com" target="_blank">Association of Design Education</a> free. The ADE will continue to provide you the on-going educational support you will need as you start and grow your business.</li>
-            </ul>
-            <p>Oh, and did I mention, you will have lots of fun doing it?</p>
+            <p>In addition to covering the training materials in their entirety, we also complete three hands-on redesigns/stagings during the week to ensure your ability to implement what you have learned during class.</p>
+
             <blockquote class="testimonial"><p>My Redesign/Staging Intensive was outstanding!&nbsp; I had all my thoughts and concerns at hand when I arrived at the school on Monday, and by Friday I felt totally comfortable with everything that was presented to me, both through open forum with the class as well as the excellent manual.&nbsp; We worked with the Director of the school Ann Anderson, who was very knowledgeable, loves what she does, is so upbeat in her training style and wants nothing more than the true success of each of her students.&nbsp; I learned exactly what I needed about starting my business and recommend this class to anyone seeking a professional training experience.</p><em>Lisa Ruglio&mdash;Cromwell, CT</em></blockquote>
-            <p>Click here for <a href="questions-interior-redesign-staging-training.htm">answers to frequently asked questions</a> and for more information on what you should know about training and certification.</p>
-            <h2>Enroll in the Interior Redesign/Staging <br />
-            Intensive Class</h2>
-            <p><sup><a name="details"></a>1</sup>The five-day Interior Redesign/Real Estate Staging Intensive can be taken in one full week of training or one day at a time, depending on your needs. The cost for the full five-day intensive interior redesign/real estate staging training held in Milford, Connecticut is $2,500, which includes all of the above, as well as lunch, and beverages and snacks each day.</p>
-            <p>If you prefer to take the training at different times, you must still take the days in order.</p>
-            <p>Please check the <a href="course-schedule.htm">Class Schedule</a> or contact the School of Interior Redesign for more information. If you are interested in having the training in your area, cost is $2,750 per student, with a minimum of four students.</p>
-            <p>To see the schedule of interior redesign (one day decorating) classes or real estate staging (home staging) classes, check our <a href="course-schedule.htm">Class Schedule</a> for more information.</p>
-            <p>To reserve your space in any interior redesign training or real estate staging class, complete the <a href="register-redesign-staging-class.htm">Application</a> and submit it, along with your <a href="payment.htm">deposit of $500</a>. The balance is due two weeks prior to the start of class. One day classes must be paid in full at the time of enrollment.</p>
+
+            <h2>To Enroll in the Interior Redesign/Staging<br />Intensive Class</h2>
+            <p>Cost for the full four-day Interior Redesign/Real Estate Staging Intensive held in Milford, Connecticut is $2,000, which includes all of the above, as well as lunch, and beverages and snacks each day.</p>
+		  <blockquote>
+            <p>To see the schedule of interior redesign/real estate staging (home staging) classes, check our <a href="course-schedule.htm">Class Schedule</a> for more information.</p>
+            <p>To reserve your space in any interior redesign training or real estate staging class, complete the <a href="register-redesign-staging-class.htm">Application</a> and submit it, along with your <a href="payment.htm">deposit of $500</a>. The balance is due two weeks prior to the start of class.</p>
+		  </blockquote>
             <!-- #BeginLibraryItem "/Library/cancellation-policy.lbi" -->
             <p><strong>Cancellation Policy</strong>: A full refund will be given if the student cancels ten days prior to the first day of class. A 75% refund will apply if the student cancels at anytime after the ten day cancellation period. No refund will be given after the start of classes. However, should a student need to cancel or leave due to an emergency, the tuition will be applied to another scheduled class. Refunds will be mailed to the student within fourteen days of cancellation.</p>
             <!-- #EndLibraryItem --><!-- #BeginLibraryItem "/Library/for-more-info.lbi" -->
