--- a/www/real-estate-staging.htm
+++ b/www/real-estate-staging.htm
@@ -98,24 +98,12 @@
           <td width="540" align="left" valign="top"><br />
             <!-- InstanceBeginEditable name="content" -->
           <h1 align="center"> Real Estate Staging Classes</h1>
-          <!-- real estate staging training and home staging training -->
-          <p><!-- real estate staging training and home staging training --><img src="images/staging_chair_vignette.jpg" alt="Real estate staging training (home staging training) classes offered by the School of Interior Redesign include a Real Estate Staging for the Professional workshop and an Intensive Real Estate Staging certificate program, with both real estate staging training and home staging training education classes available in our Milford CT school or for home study through teleclasses. " width="158" height="250" hspace="6" vspace="8" align="right" />While the five-day <a href="interior-redesign-staging.htm">Interior Redesign/Real Estate Staging Intensive Workshop</a> includes real estate staging training (home staging training), <strong>if you are interested strictly in real estate staging as a business</strong>, check out the home staging workshops below:</p>
-          <h2>Real Estate Staging Intensive Training </h2>
-          <p>The  <a href="real-estate-staging-intensive.htm">Real Estate Staging
-                Intensive Workshop</a> is a Certificate home staging training
-                program designed
-                <strong>for those interested in starting a business
-                in real estate staging</strong>.
-                This is 3 days of intensive real estate staging training,
-            including hands-on home staging experience. </p>
-          <h2>Real Estate Staging for the Professional </h2><!-- real estate staging training and home staging training -->
-          <p><a href="real-estate-staging-professional.htm">Real Estate Staging for the Professional</a> offers you 2 days of classroom learning and hands-on experience. If you would like to add marketing, you can add another 1/2 day. These workshops are designed <strong>for anyone wanting to incorporate real estate staging (home staging) into their repertoire of services</strong>. And it's perfect for real estate professionals!</p>
+          <p><img src="images/staging_chair_vignette.jpg" alt="Real estate staging training (home staging training) classes offered by the School of Interior Redesign include a Real Estate Staging for the Professional workshop and an Intensive Real Estate Staging certificate program, with both real estate staging training and home staging training education classes available in our Milford CT school or for home study through teleclasses. " width="158" height="250" hspace="6" vspace="8" align="right" />While the four-day <a href="interior-redesign-staging.htm">Interior Redesign/Real Estate Staging Intensive Workshop</a> includes real estate staging training (home staging training), <strong>if you are interested strictly in real estate staging</strong>, check out the home staging workshops below:</p>
+          <h2>Real Estate Staging<br/>Intensive Training </h2>
+          <p>The <a href="real-estate-staging-intensive-3-day.htm">Real Estate Staging Intensive Workshop</a> is a Certificate home staging training program designed          <strong>for those interested strictly in real estate staging</strong>. This is 2 days of intensive real estate staging training, including hands-on home staging experience.</p>
               <h2>Real Estate Staging Home Study</h2>
 			<p>The <a href="assets/sir-real-estate-staging.pdf" target="_blank">Real Estate Staging Home Study program</a> takes you through the entire process of preparing homes for sale, from the staging consultation, all the way to working with sellers as they make major (or minor) changes to their property to increase its value and decrease the amount of time it takes to sell. You will learn <strong>what to do, how to do it, as well as when to stop</strong>. Broken into modules for ease of learning, the <strong>comprehensive manual and accompanying workbook</strong> provide all of the information and exercises needed to ensure your complete and thorough understanding of real estate staging.</p>
-          <p align="center"><a href="questions-interior-redesign-staging-training.htm"><em><strong>Click
-                  here for the questions you should ask...and </strong></em><br />
-              <em><strong>what you should know about training and certification</strong></em></a><em><strong>.</strong></em></p>
-          <!-- InstanceEndEditable --></td>
+            <!-- InstanceEndEditable --></td>
         </tr>
         <tr>
           <td width="10" align="left" valign="top" class="navbar">&nbsp;</td>
